Changing the song route

--- a/client-app/src/app/song/song-read/song-read.component.html
+++ b/client-app/src/app/song/song-read/song-read.component.html
@@ -4,7 +4,7 @@
         {{ song.musicName }} published by {{ song.userName }}
       </li>
       <li *ngFor="let song of songs">
-        <a [routerLink]="['/songs', song.id]">{{ song.musicName }} by {{ song.songSingers }}</a>
+        <a [routerLink]="['/song', song.id]">{{ song.musicName }} by {{ song.songSingers }}</a>
       </li>
     </ul>
   </div>
