--- a/client-app/src/app/song/song-update/song-update.component.html
+++ b/client-app/src/app/song/song-update/song-update.component.html
@@ -1,1 +1,24 @@
-<p>song-update works!</p>
+<div *ngIf="songForm">
+    <form [formGroup]="songForm" (ngSubmit)="onSubmit()">
+      <label for="name">Name:</label>
+      <input id="name" formControlName="Name" type="text" />
+  
+      <label for="genre">Genre:</label>
+      <input id="genre" formControlName="GenreId" type="text" />
+  
+      <label for="album">Album:</label>
+      <input id="album" formControlName="AlbumId" type="text" />
+  
+      <label for="Review">Review:</label>
+      <input id="Review" formControlName="Review" type="text" />
+  
+      <label for="Lyrics">Lyrics:</label>
+      <input id="Lyrics" formControlName="Lyrics" type="text" />
+  
+      <label for="Slug">Slug:</label>
+      <textarea id="Slug" formControlName="Slug"></textarea>
+  
+      <button type="submit">Update Song</button>
+    </form>
+  </div>
+  
