--- a/client-app/src/app/singer/singer-read/singer-read.component.html
+++ b/client-app/src/app/singer/singer-read/singer-read.component.html
@@ -1,10 +1,16 @@
-<div *ngIf="singers.length > 0">
-    <ul>
-      <li *ngFor="let singer of singers">
-        <a [routerLink]="['/singer', singer.id]">{{ singer.name }} detail page</a>
-      </li>
-    </ul>
+<div *ngIf="singers.length > 0" class="container">
+  <div class="row">
+    <div *ngFor="let singer of singers" class="col-md-4 mb-4">
+      <div class="card song-card" style="width: 100%; height: 350px;">
+        <img [src]="" style="object-fit: cover;" class="card-img-top song-image" alt="{{ singer.name }}">
+        <div class="card-body" style="background-color: rgb(255, 255, 255);">
+          <a [routerLink]="['/song', singer.id]" class="card-text">{{ singer.name }}</a>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+
   <div *ngIf="singers.length === 0">
     No singers available.
   </div>
