--- a/client-app/src/app/song/song-read/song-read.component.html
+++ b/client-app/src/app/song/song-read/song-read.component.html
@@ -1,15 +1,79 @@
-<div *ngIf="songs.length > 0">
-    <ul>
-      <li *ngFor="let song of songs">
-        {{ song.musicName }} published by {{ song.userName }}
-      </li>
-      <li *ngFor="let song of songs">
-        <a [routerLink]="['/song', song.id]">{{ song.musicName }} by {{ song.songSingers }}</a>
-      </li>
-    </ul>
+<style>
+  h1 {
+  font-family: "Montserrat Medium";
+  font-size:4vw;
+  color: rgb(119, 92, 11);
+  max-width: 40ch;
+  text-align: left;
+  transform: scale(0.94);
+  animation: scale 5s forwards cubic-bezier(1, 1.5, 1, 1.5);
+  margin: 85px 5px 45px 200px;
+  text-shadow: -4px 4px block;
+
+}
+@keyframes scale {
+  100% {
+    transform: scale(1);
+  }
+}
+
+span {
+  display: inline-block;
+  margin-right: 10px;
+  opacity: 0;
+  filter: blur(4px);
+}
+
+span:nth-child(1) {
+  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(2) {
+  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(3) {
+  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(4) {
+  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+
+@keyframes fade-in {
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+</style>
+
+
+<h1>
+  <span>Enjoy</span>
+  <span>Songs</span>
+  <span>By</span>
+  <span>Eom.</span>
+</h1>
+
+
+<div *ngIf="songs.length > 0" class="container">
+  <div class="row">
+    <div *ngFor="let song of songs" class="col-md-4 mb-4">
+      <div class="card song-card" style="width: 100%; height: 350px;">
+        <img [src]="" style="object-fit: cover;" class="card-img-top song-image" alt="{{ song.musicName }}">
+        <div class="card-body" style="background-color: rgb(255, 255, 255);">
+          <a [routerLink]="['/song', song.id]" class="card-text">{{ song.musicName }}</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div *ngIf="songs.length === 0">
-    No songs available.
-  </div>
+</div>
+
+
+<div *ngIf="songs.length === 0">
+  No songs available.
+</div>
   
   
